Code cleanup, improve readme